<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_location"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="true"
            android:key="use_imperial_units"
            android:title="@string/unit_system_title"
            android:summaryOn="@string/unit_system_imperial"
            android:summaryOff="@string/unit_system_metric"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="use_google_maps"
            android:title="@string/map_provider_toggle"
            android:summary="@string/map_provider_toggle_summary"
            android:enabled="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_appearance"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="system"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:title="@string/theme_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_about"
        app:iconSpaceReserved="false">

        <Preference
            android:key="app_version"
            android:title="App Version"
            android:summary="1.0.0"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
